// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UploadPhoto renders default state and disables submit 1`] = `
<div>
  <div
    class="sc-eAKupd"
  >
    <div
      class="sc-fmKESW iRLnfY"
    />
    <form>
      <div
        class="sc-csKIKD cmDwWi"
      >
        <label
          class="sc-irLwvM kyIWET"
          for="files"
        >
          Загрузить фото
        </label>
        <input
          class="sc-eTNem cJVMTg"
          multiple=""
          name="files"
          type="file"
        />
      </div>
      <div
        class="sc-kMzDYv hvhEqB"
      >
        <label
          class="sc-jTQDnk kacxwV"
        >
          <input
            class="sc-gLLvbB filfep"
            type="checkbox"
          />
          <span
            class="sc-iBdmCa hgaMgi"
          />
          <span
            class="sc-fsYeqr iSlNFZ"
          >
            Скрыть
          </span>
        </label>
      </div>
      <button
        class="sc-hABAzn hesWCt"
        disabled=""
        type="submit"
      >
        Загрузить фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto shows error message when upload fails 1`] = `
<div>
  <div
    class="sc-eAKupd"
  >
    <div
      class="sc-fmKESW iRLnfY"
    >
      boom
    </div>
    <form>
      <div
        class="sc-csKIKD cmDwWi"
      >
        <label
          class="sc-irLwvM kyIWET"
          for="files"
        >
          1 файл выбран
        </label>
        <input
          class="sc-eTNem cJVMTg"
          multiple=""
          name="files"
          type="file"
        />
      </div>
      <div
        class="sc-kMzDYv hvhEqB"
      >
        <label
          class="sc-jTQDnk kacxwV"
        >
          <input
            class="sc-gLLvbB filfep"
            type="checkbox"
          />
          <span
            class="sc-iBdmCa hgaMgi"
          />
          <span
            class="sc-fsYeqr iSlNFZ"
          >
            Скрыть
          </span>
        </label>
      </div>
      <div
        class="sc-bZHTEM jhUFGE"
      >
        <div
          class="sc-gjLKRm hxaXjg"
        >
          photo.jpg
           | 
          image/jpeg
           · 
          4 B
           · Canon M50
           · 01.01.2020, 03:00:00
           · 1.000000, 2.000000 · 3m
        </div>
      </div>
      <button
        class="sc-hABAzn gvjyd"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto submits files and shows success message 1`] = `
<div>
  <div
    class="sc-eAKupd"
  >
    <div
      class="sc-fmKESW iRLnfY"
    />
    <form>
      <div
        class="sc-csKIKD cmDwWi"
      >
        <label
          class="sc-irLwvM kyIWET"
          for="files"
        >
          Загрузить фото
        </label>
        <input
          class="sc-eTNem cJVMTg"
          multiple=""
          name="files"
          type="file"
        />
      </div>
      <div
        class="sc-ilxdoe francF"
      >
        Загружено: 1 из 1. Ошибок: 0
      </div>
      <div
        class="sc-kMzDYv hvhEqB"
      >
        <label
          class="sc-jTQDnk kacxwV"
        >
          <input
            class="sc-gLLvbB filfep"
            type="checkbox"
          />
          <span
            class="sc-iBdmCa hgaMgi"
          />
          <span
            class="sc-fsYeqr iSlNFZ"
          >
            Скрыть
          </span>
        </label>
      </div>
      <button
        class="sc-hABAzn hesWCt"
        disabled=""
        type="submit"
      >
        Загрузить фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto updates label and shows selected file 1`] = `
<div>
  <div
    class="sc-eAKupd"
  >
    <div
      class="sc-fmKESW iRLnfY"
    />
    <form>
      <div
        class="sc-csKIKD cmDwWi"
      >
        <label
          class="sc-irLwvM kyIWET"
          for="files"
        >
          1 файл выбран
        </label>
        <input
          class="sc-eTNem cJVMTg"
          multiple=""
          name="files"
          type="file"
        />
      </div>
      <div
        class="sc-kMzDYv hvhEqB"
      >
        <label
          class="sc-jTQDnk kacxwV"
        >
          <input
            class="sc-gLLvbB filfep"
            type="checkbox"
          />
          <span
            class="sc-iBdmCa hgaMgi"
          />
          <span
            class="sc-fsYeqr iSlNFZ"
          >
            Скрыть
          </span>
        </label>
      </div>
      <div
        class="sc-bZHTEM jhUFGE"
      >
        <div
          class="sc-gjLKRm hxaXjg"
        >
          photo.jpg
           | 
          image/jpeg
           · 
          4 B
           · Canon M50
           · 01.01.2020, 03:00:00
           · 1.000000, 2.000000 · 3m
        </div>
      </div>
      <button
        class="sc-hABAzn gvjyd"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;
